Added behaviours to buttons, working on ibm cloud logic

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     },
     "devDependencies": {
         "electron": "^5.0.3"
+    },
+    "dependencies": {
+        "ibm-watson": "^4.2.1"
     }
 }
