Added progress window; Added logic calling IBM Cloud API;

--- a/package.json
+++ b/package.json
@@ -17,7 +17,5 @@
     "devDependencies": {
         "electron": "^5.0.3"
     },
-    "dependencies": {
-        "ibm-watson": "^4.2.1"
-    }
+    "dependencies": {}
 }
