Started working to add AWS as another cloud service provider; Added a settings button on the index page;

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "electron": "^5.0.6",
         "electron-installer-dmg": "^3.0.0",
         "electron-packager": "^14.0.1"
+    },
+    "dependencies": {
+        "aws-sdk": "^2.524.0"
     }
 }
